Aula 23 sobre funções anônimas

--- a/secao03/aula016/index.html
+++ b/secao03/aula016/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>13 - Switch</title>
+    <title>16 - Web Storage</title>
 </head>
 <body>
-    <script src="scripts.js"></script>
-    <button onclick="pedir()">Fazer pedido</button>
+    <h1>16 - Web Storage</h1>
 </body>
 </html>
