--- a/secao03/aula023/index.html
+++ b/secao03/aula023/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>13 - Switch</title>
+    <title>23 - Funções Anônimas</title>
 </head>
 <body>
-    <script src="scripts.js"></script>
-    <button onclick="pedir()">Fazer pedido</button>
+   <h1>23 - Funções Anônimas</h1>
+   <script src="scripts.js"></script>
 </body>
 </html>
